--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "@covalent/core": "^1.0.0-beta.4",
+    "@covalent/dynamic-forms": "^1.0.0-beta.5",
+    "@covalent/highlight": "^1.0.0-beta.5",
+    "@covalent/http": "^1.0.0-beta.5",
+    "@covalent/markdown": "^1.0.0-beta.5",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.2.1",
